--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,6 @@
 .App {
-  text-align: center;
+  /* text-align: center; */
+  background-color: darkslateblue;
+  color:azure;
+  padding-left: 40%;
 }
